Change font and fix header wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
   }
   
   .text {
-      width: 80%;
       color: black;      
       font-size: 12pt;
       text-align: justify;
